--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyborg AI Agentic</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
     <!-- Trunk directives -->
     <style type="text/css">
@@ -79,7 +79,7 @@
             margin-bottom: 20px;
             letter-spacing: 1px;
         }
-        
+
         /* Progress bar container */
         #progress-container {
             width: 300px;
@@ -122,24 +122,35 @@
                 transform: rotate(360deg);
             }
         }
+
+        /* Error message styling */
+        #error-message {
+            display: none;
+            color: #ff6b6b;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
+            font-size: 14px;
+            margin-top: 20px;
+            text-align: center;
+            max-width: 400px;
+        }
     </style>
-    <link rel="modulepreload" href="assets/wasm/app_cyborgai-c18ecea9b0034051.js" crossorigin="anonymous"
-          integrity="sha384-Sgoz+ZeEYnuX4cddmTdp6IkjbVKjZslvYEzFI6ngqzwIxTYusVjVPXok/LJ9Sk24">
-    <link rel="preload" href="assets/wasm/app_cyborgai-c18ecea9b0034051_bg.wasm" crossorigin="anonymous"
-          integrity="sha384-YQa/ViJii+d2oM69a3eXtiSGo+9hnC0xTfPI7pqA5xbFS7GWRHXSWaj1nWEHEEJP" as="fetch"
-          type="application/wasm">
+
+    <!-- Preload assets - removed integrity hashes for GitHub Pages compatibility -->
+    <link rel="modulepreload" href="./assets/wasm/app_cyborgai-c18ecea9b0034051.js" crossorigin="anonymous">
+    <link rel="preload" href="./assets/wasm/app_cyborgai-c18ecea9b0034051_bg.wasm" crossorigin="anonymous" as="fetch" type="application/wasm">
 </head>
 
 <body>
 <!-- Loading screen -->
 <div id="loading-screen">
-    <img id="loading-logo" src="assets/images/logo.png" alt="Cyborg AI Agentic Logo"/>
+    <img id="loading-logo" src="./assets/images/logo.png" alt="Cyborg AI Agentic Logo"/>
     <div id="loading-text">Loading Cyborg AI Agentic...</div>
     <div id="progress-container">
         <div id="progress-bar"></div>
     </div>
     <div id="progress-text">0%</div>
     <div class="spinner"></div>
+    <div id="error-message"></div>
 </div>
 
 <!-- Canvas for egui app -->
@@ -151,6 +162,7 @@
     const progressBar = document.getElementById('progress-bar');
     const progressText = document.getElementById('progress-text');
     const loadingScreen = document.getElementById('loading-screen');
+    const errorMessage = document.getElementById('error-message');
 
     // Simulate progress (WASM loading doesn't provide real progress)
     const simulateProgress = () => {
@@ -181,6 +193,13 @@
         }, 300);
     };
 
+    // Function to show error
+    window.showLoadingError = function(message) {
+        errorMessage.textContent = message;
+        errorMessage.style.display = 'block';
+        document.querySelector('.spinner').style.display = 'none';
+    };
+
     // Fallback: hide loading screen after timeout if WASM doesn't call hideLoadingScreen
     setTimeout(() => {
         if (!loadingScreen.classList.contains('hidden')) {
@@ -190,16 +209,44 @@
 </script>
 
 <script type="module">
-    import init, * as bindings from 'agentic_beta/assets/wasm/app_cyborgai-c18ecea9b0034051.js';
+    // Use consistent relative paths for GitHub Pages
+    const wasmJsPath = './assets/wasm/app_cyborgai-c18ecea9b0034051.js';
+    const wasmBinaryPath = './assets/wasm/app_cyborgai-c18ecea9b0034051_bg.wasm';
 
-    const wasm = await init({module_or_path: 'app_cyborgai-c18ecea9b0034051_bg.wasm'});
+    try {
+        // Dynamic import with relative path
+        const module = await import(wasmJsPath);
+        const init = module.default;
+        const bindings = module;
 
+        // Fetch WASM as ArrayBuffer to avoid MIME type issues on GitHub Pages
+        const wasmResponse = await fetch(wasmBinaryPath);
 
-    window.wasmBindings = bindings;
+        if (!wasmResponse.ok) {
+            throw new Error(`Failed to fetch WASM: ${wasmResponse.status} ${wasmResponse.statusText}`);
+        }
 
+        const wasmBytes = await wasmResponse.arrayBuffer();
 
-    dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
+        // Initialize with ArrayBuffer instead of URL
+        const wasm = await init(wasmBytes);
 
+        window.wasmBindings = bindings;
+
+        dispatchEvent(new CustomEvent("TrunkApplicationStarted", { detail: { wasm } }));
+
+        // Hide loading screen on successful load
+        if (window.hideLoadingScreen) {
+            window.hideLoadingScreen();
+        }
+
+    } catch (error) {
+        console.error('Failed to load WASM:', error);
+
+        if (window.showLoadingError) {
+            window.showLoadingError(`Failed to load application: ${error.message}`);
+        }
+    }
 </script>
 </body>
 
